
#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for
#        the Bunch Charge Monitor IOC Application.
#
#  Auth: xx-Dec-2012, XXX         (xxx)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------
R2.0.15         J. Vasquez              -7/31/2018
                 - Integrate the LCLS-II MPS module.

R2.0.14		Dan Sciortino		-7/30/2018
		 - added getBergozLocation to IM01
		 - modified st.cmd to call
R2.0.13 	Carolina Bianchini (carolina) - 7/25/2018		
		 -updated unit PV number to match the Z location 360
		 -Temperature is now working, corrected the templates' macros.

R2.0.12		Dan Sciortino (disco)    -7/24/2018
		 -Added etc/ 
		 -updated main MakeFile to call etc/makefile
		 -added ethercat templates, driver calls for ethercat 
		  into st.cmd for gunb SIOCs

R2.0.11         C. Bianchini (carolina)  -7/24/2018
		 -Fixed macro in st.cmd for sioc-gunb-im01 AMC0->AMC1
		 -Fixed the .dict file to match FPGA functionalities:
			-removed: SelectSource, trigDelay, TrigStretch, 
			outPolarity, softTrig
			-added: RxCountReset, MsgDelay
R2.0.10-DO NOT USE Dan Sciortino		-7/23/2018
		 - Fixed naming of PVs in st.cmd
		 - Added bergozExpert display in
		 bcmApp/srcDisplay

R2.0.9-DO NOT USE Dan Sciortino		-7/20/2018
		 - Cleaned up extra PVs from substitions
		  and dict file
		 - Added mapping to PVs in dict file
		 - Updated Bergoz location in st.cmd

R2.0.8		Dan Sciortino		-7/18/2018
		 - Updated Keitley port and address

R2.0.7		Dan Sciortino		-7/18/2018
		 - Updated keithley port number

R2.0.6		Dan Sciortino		-7/16/2018
		 -Upadted picometer address
		 -Updated RATE record generation:

R2.0.5		Dan Sciortino 		-7/16/2018
		  -Updated substitutions file for record generation
		  --Updated record for alarm configuration

R2.0.4		Dan Sciortino		-7/12/2018
		  - Updated yaml files in AmcCarrierBcm_project.yaml
